<resources>
    <string name="app_name">Viet Market</string>
    <string name="facebook_app_id">209910142922615</string>
    <string name="fb_login_protocol_scheme">fb209910142922615</string>
    <string name="google_plus_id">80859942862-pucbv1v6k5eattv4v6oa6v69jsgrecvf.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="signin">Sign In</string>
    <string name="not_have_acc">Not have an account?</string>
    <string name="sign_up_here">Sign up here.</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google+</string>
    <string name="signup">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="retype_pass">Retype password</string>
    <string name="birthday">Birthday</string>
    <string name="have_acc">Already have an account?</string>
    <string name="sign_in_here">Sign in here.</string>
    <string name="please_enter_signin">Please enter username and password</string>
    <string name="wrong_signin">Invalid username or password</string>
    <string name="please_enter_all">Please enter all fields</string>
    <string name="pass_not_match">Password not match</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="invalid_email">Your email is invalid</string>
    <string name="please_enter_title">Please enter title task</string>
    <string name="signup_successful">Signup Successful</string>
    <string name="signup_false">Signup False</string>
    <string name="edt_hint">Type here</string>
    <string name="no_date">No date</string>
    <string name="done">Done</string>
    <string name="not_done">Not done</string>
    <string name="forgot_title">Please enter your registed email below:</string>
    <string name="enter_email">Enter email</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="market">Market</string>
    <string name="shop">Shop</string>
    <string name="discount">Discount</string>
    <string name="promotion">Promotion</string>
    <string name="popular_search">Popular searchs</string>
    <string name="brand">Brand</string>
    <string name="more">More</string>
    <string name="highlights_store">Highlights shops</string>
    <string name="highlights_products">Highlights products</string>
    <string name="lastest_products">Lastest products</string>
    <string name="suggest_products">Suggest products</string>
    <string name="load_more">Load more</string>
    <string name="search_something">Search something...</string>
    <string name="empty_content">Empty content</string>
    <string name="your_order">Your order</string>
    <string name="your_wishlist">Your wishlist</string>
    <string name="your_store">Your shop</string>
    <string name="your_favorite_shop">Your following shop</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="about_us">About us</string>
    <string name="user_information">User information</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="view_shop">View shop</string>
    <string name="products">Products</string>
    <string name="rates">Rates</string>
    <string name="details_product">Details product</string>
    <string name="weight">Weight</string>
    <string name="status">Status</string>
    <string name="stock">Stock</string>
    <string name="sold">Sold</string>
    <string name="from">From</string>
    <string name="rating_product">Rating product</string>
    <string name="view_all">View all</string>
    <string name="another_product">Another products</string>
    <string name="maybe_you_like">Maybe you like</string>
    <string name="shop_now">Buy now</string>
    <string name="rate_now">Rate now</string>
    <string name="already_rate">Already rated</string>
    <string name="login_to_rate">Sign in to rate</string>
    <string name="not_log_in">You are not login yet</string>
    <string name="added_to_your_cart">Added to your cart</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="total_product">Total product</string>
    <string name="total_user">Total user</string>
    <string name="number_of_child">Number of child</string>
    <string name="your_product_total_product">Your products/Total products</string>
    <string name="your_order_total_order">Your orders/Total orders</string>
    <string name="top_product">Top product</string>
    <string name="your_shop_rank">Your shop rank</string>
    <string name="hall_of_fame">Hall of fame</string>
    <string name="total_shop">Total shop</string>
    <string name="total_order">Total order</string>
    <string name="top_rate">Top rate</string>
    <string name="most_like">Most like</string>
    <string name="best_sell">Best sell</string>
    <string name="already_in_your_cart">This item already in your cart</string>
    <string name="do_you_really_want_to_delete">Do you really want to remove this item?</string>
    <string name="yes">Yes</string>
    <string name="item_has_been_removed">Item has been removed!</string>
    <string name="remove_false">Remove false</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="add_to_your_wishlist">Added to your wishlist</string>
    <string name="remove_from_your_wishlist">Removed from your wishlist</string>
    <string name="carry_out_payment">Carry out payment</string>
    <string name="summary">Summary:</string>
    <string-array name="payment_step">
        <item>Address</item>
        <item>Transport</item>
        <item>Payment</item>
        <item>Confirm</item>
    </string-array>
    <string name="next_shipping">Next : Transport</string>
    <string name="next_payment">Next : Payment</string>
    <string name="next_confirm">Next : Confirm</string>
    <string name="confirm">Confirm</string>
    <string name="follow">Follow</string>
    <string name="added_to_your_following">Added to your list follow</string>
    <string name="follow_false">Follow false</string>
    <string name="remove_from_your_following">Remove from your list follow</string>
    <string name="unfollow_false">Unfollow false</string>
    <string name="following_shop">Following shops</string>
    <string name="rate_title">Title</string>
    <string name="rate_content">Content</string>
    <string name="cancel">Cancel</string>
    <string name="please_add_star">Please add star</string>
    <string name="please_write_title_rate">Please write title</string>
    <string name="insert_other_address">Write your other address</string>
    <string name="ok">OK</string>
    <string name="please_enter_address">Please write your address</string>
    <string name="add_new_address">Add new address</string>
    <string name="insert_false">Insert false</string>
    <string name="please_select_address">Please select your address</string>
    <string name="please_select_transport">Please select transport</string>
    <string name="please_select_paymethod">Please select pay method</string>
    <string name="change_pass">Change password</string>
    <string name="gender">Gender</string>
    <string name="not_set">Not set</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="list_product">List products</string>
    <string name="list_order">List orders</string>
    <string name="report">Report</string>
    <string name="edit">Edit</string>
    <string name="add_new_product">Add new product</string>
    <string name="update_product">Update product</string>
    <string name="edit_information">Edit information</string>
    <string name="number">Number</string>
    <string name="user">Customer</string>
    <string name="waiting">Waiting</string>
    <string name="shipping">Shipping</string>
    <string name="received">Received</string>
    <string name="other">Other</string>
    <string name="update_status">Update status</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="information">Description</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_information">Enter description</string>
    <string name="enter_weight">Enter weight</string>
    <string name="enter_price">Enter price</string>
    <string name="add_photo">Add photo</string>
    <string name="enter_number">Enter number</string>
    <string name="add">Add</string>
    <string name="empty">Empty</string>
    <string name="payment">Payments</string>
    <string name="m_false">False</string>
    <string name="order_confirmed_successful">Your order has been confirmed successfully!</string>
    <string name="upload_image">Upload Image</string>
    <string name="take_picture">Take a picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_new_photo_to_upload">No new photo to upload</string>
    <string name="not_choose_image">Not choose image yet</string>
    <string name="upload_successful">Upload successful!</string>
    <string name="file_size_too_large">File size too large!</string>
    <string name="kg">Kg</string>
    <string name="g">gam</string>
    <string name="not_select_unit">Not select unit yet</string>
    <string name="not_select_brand">Not select brand yet</string>
    <string name="not_select_category">Not select category yet</string>
    <string name="not_upload_image">Not upload image product yet</string>
    <string name="add_successful">Add successful!</string>
    <string name="add_false">Add false!</string>
    <string name="code_already_exist">Code already existed</string>
    <string name="update_successful">Update successful!</string>
    <string name="update_false">Update false!</string>
    <string name="no_data">No data found!</string>
    <string name="not_connect_internet">Not connect to internet!</string>
    <string name="try_again">Try again</string>
    <string name="order_by">Order by:</string>
    <string name="lastest">Lastest</string>
    <string name="oldest">Oldest</string>
    <string name="price_low_hight">Price: cheap - expensive</string>
    <string name="price_hight_low">Price: expensive - cheap</string>
    <string name="filter">Filter:</string>
    <string name="all">All</string>
    <string name="apply">Apply</string>
    <string name="price_a">Price</string>
    <string name="choose_category">Choose category</string>
    <string name="choose_price">Choose price</string>
    <string name="less_than">Less than</string>
    <string name="more_than">More than</string>
    <string name="or">OR</string>
    <string name="do_you_want_clear_filter">Do you want clear all filter?</string>
    <string name="wishlist">Your wishlist</string>
    <string name="register">Register</string>
    <string name="register_now">Register now</string>
    <string name="name_shop">Name shop</string>
    <string name="slogan">Slogan</string>
    <string name="avatar">Avatar</string>
    <string name="cover">Cover</string>
</resources>