<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="edu.hust.truongvu.choviet.myshop.add_product.AddProductActivity">
    <include
        layout="@layout/toolbar_extra"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_big"
            android:orientation="vertical">
            <edu.hust.truongvu.choviet.customview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_tiny"
                android:textColor="@color/black"
                android:text="@string/name"/>
            <edu.hust.truongvu.choviet.customview.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:hint="@string/enter_name"/>
            <edu.hust.truongvu.choviet.customview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_tiny"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/black"
                android:text="@string/image"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

            </android.support.v7.widget.RecyclerView>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_border_gray">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_small"
                    android:layout_centerInParent="true">
                    <ImageView
                        android:layout_width="@dimen/icon_size_medium"
                        android:layout_height="@dimen/icon_size_medium"
                        android:tint="@color/colorGray"
                        android:src="@drawable/camera"/>
                    <edu.hust.truongvu.choviet.customview.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_photo"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:textColor="@color/grayicon"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/margin_small"
                    android:orientation="vertical">
                    <edu.hust.truongvu.choviet.customview.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_tiny"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textColor="@color/black"
                        android:text="@string/brand"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height_tiny"
                        android:layout_marginTop="@dimen/margin_small">

                    </Spinner>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:orientation="vertical">
                    <edu.hust.truongvu.choviet.customview.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_tiny"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textColor="@color/black"
                        android:text="@string/category"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height_tiny"
                        android:layout_marginTop="@dimen/margin_small">

                    </Spinner>
                </LinearLayout>
            </LinearLayout>
            <edu.hust.truongvu.choviet.customview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_tiny"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/black"
                android:text="@string/weight"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <edu.hust.truongvu.choviet.customview.MyEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:inputType="number"
                    android:layout_weight="3"
                    android:layout_marginRight="@dimen/margin_small"
                    android:hint="@string/enter_weight"/>
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_weight="1">

                </Spinner>
            </LinearLayout>

            <edu.hust.truongvu.choviet.customview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_tiny"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/black"
                android:text="@string/information"/>
            <edu.hust.truongvu.choviet.customview.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:lines="3"
                android:gravity="top"
                android:hint="@string/enter_information"/>
            <edu.hust.truongvu.choviet.customview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_tiny"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/black"
                android:text="@string/stock"/>
            <edu.hust.truongvu.choviet.customview.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:inputType="number"
                android:hint="@string/enter_number"/>
            <edu.hust.truongvu.choviet.customview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_tiny"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/black"
                android:text="@string/price"/>
            <edu.hust.truongvu.choviet.customview.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:inputType="number"
                android:hint="@string/enter_price"/>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
