<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.hust.truongvu.choviet.user.info_user.InfoUserActivity">
    <include
        layout="@layout/toolbar_extra"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_small">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_big"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">
                <edu.hust.truongvu.choviet.helper.customview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_tiny"
                    android:textColor="@color/black"
                    android:text="@string/full_name"/>
                <edu.hust.truongvu.choviet.helper.customview.MyEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small" />
                <edu.hust.truongvu.choviet.helper.customview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_tiny"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/black"
                    android:text="@string/phone"/>
                <edu.hust.truongvu.choviet.helper.customview.MyEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small" />
                <edu.hust.truongvu.choviet.helper.customview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_tiny"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/black"
                    android:text="@string/address"/>
                <edu.hust.truongvu.choviet.helper.customview.MyEditText
                    android:id="@+id/edt_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:lines="3"
                    android:gravity="center_vertical" />
                <edu.hust.truongvu.choviet.helper.customview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_tiny"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/black"
                    android:text="@string/stock"/>
                <edu.hust.truongvu.choviet.helper.customview.MyEditText
                    android:id="@+id/edt_stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:inputType="number"
                    android:hint="@string/enter_number"/>
                <edu.hust.truongvu.choviet.helper.customview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_tiny"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/black"
                    android:text="@string/price"/>
                <edu.hust.truongvu.choviet.helper.customview.MyEditText
                    android:id="@+id/edt_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:inputType="number"
                    android:hint="@string/enter_price"/>
                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:text="@string/add"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
