<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_forgotpass"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hust.truongvu.todoapp.fragment.ForgotPassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin_big"
        android:orientation="vertical">
        <edu.hust.truongvu.choviet.customview.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_title"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginBottom="@dimen/margin_big"/>
        <hust.truongvu.todoapp.customview.MyEditText
            android:id="@+id/enter_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height_medium"
            android:singleLine="true"
            android:hint="@string/enter_email"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/margin_medium">
            <hust.truongvu.todoapp.customview.MyButton
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textAllCaps="false"
                android:layout_marginRight="@dimen/margin_tiny"
                android:background="@color/colorSecond"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/textColorWhite"/>
            <hust.truongvu.todoapp.customview.MyButton
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin_tiny"
                android:background="@color/colorSecondDark"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/textColorWhite"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
