<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_large">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_white"
        android:padding="@dimen/margin_medium"
        android:orientation="vertical">
        <edu.hust.truongvu.choviet.helper.customview.MyPwEditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hide="true"
            android:textSize="@dimen/text_size_medium"
            android:hint="@string/password"/>
        <edu.hust.truongvu.choviet.helper.customview.MyPwEditText
            android:id="@+id/edt_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hide="true"
            android:hint="@string/retype_pass"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/margin_medium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_size"
            android:layout_marginTop="@dimen/margin_big"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark">
                <edu.hust.truongvu.choviet.helper.customview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium"
                    android:text="@string/cancel"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorBlueDark"
                android:layout_weight="2">
                <edu.hust.truongvu.choviet.helper.customview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium"
                    android:text="@string/update"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>