<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/margin_big"
        android:background="@drawable/bg_white_border"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_large"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_big"
        android:paddingBottom="@dimen/padding_big">
        <edu.hust.truongvu.choviet.customview.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/do_you_really_want_to_delete"
            android:textColor="@color/black" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">
            <edu.hust.truongvu.choviet.customview.MyTextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:padding="@dimen/padding_small"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentRight="true"/>
            <edu.hust.truongvu.choviet.customview.MyTextView
                android:id="@+id/tv_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_medium"
                android:layout_toLeftOf="@+id/tv_cancel"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginRight="@dimen/margin_big"
                android:text="@string/yes"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>